bioconductor-0327/report/STAN/raw-results/kunpeng1/buildsrc-out.txt
##############################################################################
##############################################################################
###
### Running command:
###
###   /home/biocbuild/bbs-3.17-bioc/R/bin/R CMD build --keep-empty-dirs --no-resave-data STAN
###
##############################################################################
##############################################################################


* checking for file ‘STAN/DESCRIPTION’ ... OK
* preparing ‘STAN’:
* checking DESCRIPTION meta-information ... OK
* cleaning src
* installing the package to build vignettes
      -----------------------------------
* installing *source* package ‘STAN’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.3.0-1ubuntu1~22.04) 11.3.0’
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c Bernoulli.cpp -o Bernoulli.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c EmissionFactory.cpp -o EmissionFactory.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c EmissionFunction.cpp -o EmissionFunction.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c HMM.cpp -o HMM.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c InitialProbability.cpp -o InitialProbability.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c JointlyIndependent.cpp -o JointlyIndependent.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c MemoryAllocation.cpp -o MemoryAllocation.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c Multinomial.cpp -o Multinomial.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c MultivariateGaussian.cpp -o MultivariateGaussian.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c NegativeBinomial.cpp -o NegativeBinomial.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c ParamContainerEmissions.cpp -o ParamContainerEmissions.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c Poisson.cpp -o Poisson.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c PoissonLogNormal.cpp -o PoissonLogNormal.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c RAccessUtils.cpp -o RAccessUtils.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c RWrapper.cpp -o RWrapper.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c TransitionMatrix.cpp -o TransitionMatrix.o
g++ -std=gnu++17 -I"/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include" -DNDEBUG   -I/usr/local/include   -D_RDLL_ -fopenmp  -fPIC  -g -O2  -c matUtils.cpp -o matUtils.o
matUtils.cpp: In function ‘double matrixDet(double**, int)’:
matUtils.cpp:114:23: warning: ISO C++17 does not allow ‘register’ storage class specifier [-Wregister]
  114 |     for (register int i = 0 ; i < myN ; i++)
      |                       ^
matUtils.cpp:115:27: warning: ISO C++17 does not allow ‘register’ storage class specifier [-Wregister]
  115 |         for (register int j = i ; j < myldz ; j++)
      |                           ^
matUtils.cpp:118:20: error: too few arguments to function ‘void dspev_(const char*, const char*, const int*, double*, double*, double*, const int*, double*, int*, size_t, size_t)’
  118 |     F77_NAME(dspev)("V", "U", &myN, myAP, myW, myZ, &myldz, myWork, &myInfo) ;
      |                    ^
In file included from /home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include/R.h:78,
                 from matUtils.h:6,
                 from matUtils.cpp:2:
/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include/R_ext/Lapack.h:1050:10: note: declared here
 1050 | F77_NAME(dspev)(const char* jobz, const char* uplo, const int* n,
      |          ^~~~~
/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include/R_ext/RS.h:77:25: note: in definition of macro ‘F77_CALL’
   77 | # define F77_CALL(x)    x ## _
      |                         ^
/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/include/R_ext/Lapack.h:1050:1: note: in expansion of macro ‘F77_NAME’
 1050 | F77_NAME(dspev)(const char* jobz, const char* uplo, const int* n,
      | ^~~~~~~~
matUtils.cpp:125:23: warning: ISO C++17 does not allow ‘register’ storage class specifier [-Wregister]
  125 |     for (register int i = 0 ; i < myNCol ; i++)
      |                       ^
make: *** [/home/biocbuild/bbs-3.17-bioc/R-devel_2023-03-12_r83975-bin/lib/R/etc/Makeconf:198: matUtils.o] Error 1
ERROR: compilation failed for package ‘STAN’
* removing ‘/tmp/Rtmp4M0mg1/Rinst2fcadc4f406dae/STAN’
      -----------------------------------
ERROR: package installation failed
